# polygraph

./: .gitignore  README.md  learnings.md  polygraph-project-spec.md  vercel_guide.md
backend/: explore_api.py  explore_api_v2.py  poller.py  polygraph.db  pyproject.toml  requirements.txt  sample_markets.json  seed_data.py  test_api.py  test_goldsky.py
backend/mock_data/: all_data.json  markets.json  price_histories.json  signals.json
backend/src/: __init__.py  config.py  database.py  main.py  mock_data.py  models.py
backend/src/api/: routes.py
backend/src/ingestion/: __init__.py  polymarket.py
backend/src/signals/: detector.py
docs/: API_ACCESS.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.next/: trace
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  lucide-react.js  next.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: webpack.4705a4d0f348dcaa.hot-update.js  webpack.a595ed8d46940003.hot-update.js
frontend/.next/types/app/: layout.ts  page.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/markets/: page.tsx
frontend/src/app/signals/: page.tsx
frontend/src/lib/: api.ts
(+7 files in other folders)
